--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "description": "",
   "devDependencies": {
     "@jest/globals": "^29.7.0",
+    "@swc/core": "^1.7.26",
+    "@swc/jest": "^0.2.36",
     "@types/jest": "^29.5.13",
     "@types/node": "^22.5.5",
     "@types/uuid": "^10.0.0",
