--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@jest/globals": "^29.7.0",
     "@swc/core": "^1.7.26",
     "@swc/jest": "^0.2.36",
+    "@types/bull": "^4.10.0",
     "@types/jest": "^29.5.13",
     "@types/node": "^22.5.5",
     "@types/uuid": "^10.0.0",
@@ -20,6 +21,7 @@
     "typescript": "^5.6.2"
   },
   "dependencies": {
+    "bull": "^4.16.3",
     "class-validator": "^0.14.1",
     "uuid": "^10.0.0"
   }
