--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -6,10 +6,7 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
-    "target": "ES2021",
-    "sourceMap": true,
-    "outDir": "./dist",
-    "baseUrl": "./",
+    "target": "es2017",
     "incremental": true,
     "skipLibCheck": true,
     "strictNullChecks": false,
